--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 		</dependency>
 
 	</dependencies>
+	
+	<distributionManagement>
+   <repository>
+      <id>deploymentrepo</id>
+      <url>http://localhost:8081/repository/maven-releases/</url>
+   </repository>
+</distributionManagement>
 
 	<build>
 	
