--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 	
 	<distributionManagement>
    <repository>
-      <id>deploymentrepo</id>
+      <id>deploymentRepo</id>
       <url>http://localhost:8081/repository/maven-releases/</url>
    </repository>
 </distributionManagement>
