--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   spring_app:
     depends_on:
       - mysql-db
-    image: nadiaouanes/achat
+    image: aziz9926/achat
     container_name: achat
     environment:
       SPRING_APPLICATION_JSON: '{
