--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,37 @@
-version: "3.3"
+version: "3.8"
 
 services:
-  mysql-db:
-    image: mysql:8
+  mysqldb:
+    image: mysql:5.7
     restart: unless-stopped
-    container_name: mysql-db
+    env_file: ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD= root
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
-      - 3306:3306
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin
-    restart: unless-stopped
-    container_name: php-my-admin
-    ports:
-      - 8082:80
-    environment:
-      PMA_HOST: mysql-db
-
-  spring_app:
+  app:
     depends_on:
-      - mysql-db
-    image: aziz9926/achat
-    container_name: achat
+      - mysqldb
+    build: ./spring-app
+    restart: on-failure
+    env_file: ./.env
+    ports:
+      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "root",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.username" : "$MYSQLDB_USER",
+        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update" }'
-       
       
-      
-      
-    ports:
-      - 9099:8089
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
 
 volumes:
   db:
