--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,41 @@
-version: "3.8"
+version: "3.3"
+
 
 services:
-  mysqldb:
-    image: mysql:5.7
+  mysql-db:
+    image: mysql:8
     restart: unless-stopped
-    env_file: ./.env
+    container_name: mysql-db
     environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_ROOT_PASSWORD= root
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      - 3306:3306
     volumes:
       - db:/var/lib/mysql
-  app:
-    depends_on:
-      - mysqldb
-    build: ./spring-app
-    restart: on-failure
-    env_file: ./.env
+
+  phpmyadmin:
+    image: phpmyadmin
+    restart: unless-stopped
+    container_name: php-my-admin
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+      - 8082:80
+    environment:
+      PMA_HOST: mysql-db
+
+  spring_app:
+    depends_on:
+      - mysql-db
+    image: nadiaouanes/achat
+    container_name: achat
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update" }'
-      
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+        "spring.jpa.hibernate.ddl-auto" : "update"  }'
+    ports:
+      - 9099:8089
 
 volumes:
   db:
