--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   spring_app:
     depends_on:
       - mysql-db
-    image: nadiaouanes/achat
+    image: aziz/achat
     container_name: achat
     environment:
       SPRING_APPLICATION_JSON: '{
